--- a/style.css
+++ b/style.css
@@ -1,22 +1,3 @@
-body {
-    font-family: 'Akaya Telivigala', cursive;
-}
-
-.flexible-container {
-    display: flex;
-}
-
-.part {
-    width:200%;
-    padding-left: 20px;
-}
-span{
-    color: brown;
-}
-.link-button{
-    text-decoration: none;
-     background-image: linear-gradient( rgb(131, 131, 182),rgb(82, 79, 77));
-     border-radius: 5px;
-     padding: 10px 40px;
-     color: aliceblue;
+body{
+    font-family: 'Rowdies', cursive;
 }
